@@ -8,8 +8,8 @@ android {
         applicationId "com.kunzisoft.keepass"
         minSdkVersion 14
         targetSdkVersion 27
-        versionCode = 16
-        versionName = "2.5.0.0beta16"
+        versionCode = 17
+        versionName = "2.5.0.0beta17"
         multiDexEnabled true
 
         testApplicationId = "com.kunzisoft.keepass.tests"
